# MOF-Py

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: gen_ref_pages.py
src/mofpy/: example_numpy.py
